# poker

./: .gitignore  .gitmodules
XPokerEval.MoritzHammer/: configure.local
XPokerEval.Pokersource/include/: poker_config.h
XPokerEval.TwoPlusTwo.Test/: test.cpp
jdoerrie/: CMakeLists.txt  Card.cpp  Card.h  Category.cpp  Category.h  Combinatorics.h  Conversions.h  Equity.cpp  Equity.h  Evaluator.cpp  Evaluator.h  GameType.cpp  GameType.h  Hand.cpp  Hand.h  Hashes.h  HoldemEvaluator.cpp  HoldemEvaluator.h  Makefile  OmahaEvaluator.cpp  OmahaEvaluator.h  Orderings.h  PokerGame.cpp  PokerGame.h  Print.h  Range.cpp  Range.h  Rank.cpp  Rank.h  Suit.cpp  Suit.h  Utils.cpp  Utils.h  Validation.h  card.cpp  card.h  card_collection.cpp  card_collection.h  card_set.cpp  card_set.h  (+6 more)
jdoerrie/orderings/: README.md  he3maxordering.txt  heequitysquaredordering.txt  hevsrandomordering.txt  o83maxordering.txt  o856maxordering.txt  o85ordering.txt  o85vsrandomordering.txt  o86maxordering.txt  o8ordering.txt  o8vsrandomordering.txt  oh3maxordering.txt  oh56maxordering.txt  oh5ordering.txt  oh5vsrandomordering.txt  ohvsrandomordering.txt
jdoerrie/src/: Equity.cpp  Equity.h  Evaluator.cpp  PokerGame.cpp  PokerGame.h  Range.cpp  card.cc  card.cpp  card.h  card_set.cc  card_set.cpp  card_set.h  category.h  equity.cc  equity.h  evaluator.cc  evaluator.h  game_type.cc  hand_indexer.cc  hand_indexer.h  main.cc  poker_game.cc  poker_game.h  range.cc  range.h  rank.h
